Fix zundin and statistics classes (to be continued).